<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:overScrollMode="never"
    android:fitsSystemWindows="true">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:fitsSystemWindows="true"
        android:theme="@style/AppTheme">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/toolbar_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:contentScrim="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:toolbarId="@+id/toolbar">

            <RelativeLayout
                android:id="@+id/relativeView"
                android:layout_width="match_parent"
                android:layout_height="330dp">


                <ImageView
                    android:id="@+id/img_poster_detail"
                    android:layout_width="match_parent"
                    android:layout_height="330dp"
                    android:contentDescription="@string/label_image"
                    android:fitsSystemWindows="true"
                    android:scaleType="fitXY"
                    app:layout_collapseMode="parallax"
                    tools:src="@drawable/ic_launcher_background" />

            </RelativeLayout>

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:layout_marginTop="24dp"
                app:layout_collapseMode="pin"
                app:navigationIcon="@drawable/ic_back_toolbar"
                />

        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>


    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/app_bar"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tv_title_detail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:gravity="center"
                android:layout_marginTop="16dp"
                android:textColor="@color/colorBlack"
                android:textStyle="bold"
                tools:text="BumbleBee" />

            <TextView
                android:id="@+id/text_rating"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_title_detail"
                android:layout_marginStart="@dimen/dimen_6dp"
                android:layout_marginTop="20dp"
                android:text="@string/label_rating"
                android:textColor="@color/colorBlack"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/text_publisher"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/text_rating"
                android:layout_marginStart="@dimen/dimen_6dp"
                android:layout_marginTop="10dp"
                android:text="@string/label_publisher"
                android:textColor="@color/colorBlack"
                android:textStyle="bold" />


            <androidx.appcompat.widget.AppCompatRatingBar
                android:id="@+id/ratingBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="?android:attr/ratingBarStyleSmall"
                android:layout_marginStart="4dp"
                android:layout_toEndOf="@+id/text_rating"
                android:layout_below="@id/tv_title_detail"
                android:layout_marginTop="20dp"
                android:numStars="5"
                android:stepSize="0.1"
                android:isIndicator="true"
                />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvDetailRating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@+id/ratingBar"
                android:layout_below="@+id/tv_title_detail"
                android:layout_marginStart="4dp"
                android:layout_marginTop="18dp"
                tools:text="(5.0)"
                />

            <TextView
                android:id="@+id/tv_publisher_detail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/ratingBar"
                android:layout_marginStart="4dp"
                android:layout_marginTop="12dp"
                android:layout_toEndOf="@+id/text_publisher"
                android:textColor="@color/colorBlack"
                tools:text="publisher" />


            <TextView
                android:id="@+id/text_overview"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/text_publisher"
                android:layout_marginStart="@dimen/dimen_6dp"
                android:layout_marginTop="@dimen/dimen_10dp"
                android:text="@string/label_desc"
                android:textColor="@color/colorBlack"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_description_detail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/text_overview"
                android:layout_marginTop="4dp"
                android:layout_marginStart="@dimen/dimen_6dp"
                android:layout_marginEnd="@dimen/dimen_6dp"
                android:textColor="@color/colorBlack"
                android:layout_marginBottom="200dp"
                tools:text="@string/label_description" />

        </RelativeLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>